<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Clases.logIn">

    <ImageView
        android:id="@+id/imgHeader"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/button_shape"/>
    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imgHeader"
        android:layout_marginTop="-50dp"
        android:background="@drawable/button_shape_selector"
        android:src="@drawable/ic_launcher_foreground"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/imgHeader">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumbTint="@color/colorPrimary"
                android:textOn="show"
                android:textOff="hide"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:text="@string/name"/>
            <android.support.design.widget.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="47dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/surname"/>
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/surname2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/surname2"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>